Fix few small bugs on mobile

--- a/src/app/bill/bill.component.scss
+++ b/src/app/bill/bill.component.scss
@@ -10,6 +10,7 @@ form {
   background: var(--surface-0);
   overflow: auto;
   padding: 0.6rem;
+  height: calc(100vh - 7.2rem);
   max-height: calc(
     100vh - 7.2rem
   ); // TODO this will depend on the height of the part above the form
